--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "@trussworks/react-uswds": "^1.10.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
