--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/uuid": "^8.3.0",
+    "ag-grid-community": "^25.0.1",
+    "ag-grid-react": "^25.0.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.3.0",
     "chai": "^4.2.0",
