--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
@@ -65,6 +66,7 @@
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
+    "@types/react-modal": "^3.10.6",
     "cypress": "^6.3.0",
     "sonar-scanner": "^3.1.0"
   },
