--- a/package.json
+++ b/package.json
@@ -70,9 +70,8 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
     "@types/react-modal": "^3.10.6",
-    "cypress": "^6.3.0",
-    "sonar-scanner": "^3.1.0",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "cypress": "^6.3.0"
   },
   "jest": {
     "collectCoverageFrom": [
