--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@hookstate/core": "^3.0.3",
+    "@hookstate/initial": "^3.0.0",
+    "@hookstate/touched": "^3.0.0",
+    "@hookstate/validation": "^3.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -19,13 +22,15 @@
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.3.0",
     "chai": "^4.2.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
     "react-modal": "^3.12.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
