--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "@trussworks/react-uswds": "^1.10.0",
+    "@trussworks/react-uswds": "^1.12.2",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
+    "uswds": "^2.8.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
