--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "clean:generated-api-client": "rimraf src/openapi",
     "generate-api-client": "npm run clean:generated-api-client && openapi-generator-cli generate -g typescript-axios -i resources/tron-common-api.yaml -o src/openapi --additional-properties=withSeparateModelsAndApi=true,apiPackage=apis,modelPackage=models,withInterfaces=true",
     "lint": "eslint . --ext ts,tsx",
-    "lint:fix": "eslint . --ext ts,tsx --fix"
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
@@ -102,5 +103,8 @@
       "!<rootDir>/src/openapi/**/*",
       "!<rootDir>/src/stories/**/*"
     ]
+  },
+  "resolutions": {
+    "remark-parse": "9.0.0"
   }
 }
