--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^8.3.0",
     "ag-grid-community": "^25.0.1",
     "ag-grid-react": "^25.0.1",
+    "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.3.0",
@@ -26,6 +27,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
