--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "sass": "^1.32.8",
     "typescript": "^4.1.3",
     "uswds": "^2.8.0",
