--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@types/uuid": "^8.3.0",
     "ag-grid-community": "^25.0.1",
     "ag-grid-react": "^25.0.1",
+    "ajv": "^8.4.0",
     "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.3.0",
     "chai": "^4.2.0",
     "fast-deep-equal": "^3.1.3",
+    "fp-ts": "^2.10.5",
+    "io-ts": "^2.2.16",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "react": "^17.0.1",
@@ -36,6 +39,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "sass": "^1.32.8",
+    "ts-json-schema-generator": "^0.92.0",
     "typescript": "^4.1.3",
     "uswds": "^2.8.0",
     "uuid": "^8.3.2",
@@ -54,7 +58,10 @@
     "test:e2e-ci": "npx cypress run --env INTEGRATION_TEST_HOST=https://tron-common-api.staging.dso.mil/ configFile=pipeline",
     "sonar": "sonar-scanner -Dsonar.projectVersion=${version}",
     "clean:generated-api-client": "rimraf src/openapi",
-    "generate-api-client": "npm run clean:generated-api-client && openapi-generator-cli generate -g typescript-axios -i resources/tron-common-api.yaml -o src/openapi --additional-properties=withSeparateModelsAndApi=true,apiPackage=apis,modelPackage=models,withInterfaces=true",
+    "generate-api-client:code": "npm run clean:generated-api-client && openapi-generator-cli generate -g typescript-axios -i resources/tron-common-api.yaml -o src/openapi --additional-properties=withSeparateModelsAndApi=true,apiPackage=apis,modelPackage=models,withInterfaces=true",
+    "generate-api-client:guards": "./node_modules/.bin/ts-json-schema-generator --path 'src/openapi/models/**/*.ts' -o src/api/model-types.json -i 'model-types.json'",
+    "generate-api-client:post": "node process-json.js",
+    "generate-api-client": "npm run generate-api-client:code && npm run generate-api-client:guards && npm run generate-api-client:post",
     "lint": "eslint . --ext ts,tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "preinstall": "npx npm-force-resolutions"
