fixes mini-pipe test/lint issue and testing irregularity

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "test:unit": "react-scripts test --coverage --watchAll=false",
+    "test:unit": "npm install && react-scripts test --coverage --watchAll=false",
     "cypress:open": "npx cypress open --env INTEGRATION_TEST_HOST=http://localhost:3000/",
     "test:e2e-local": "npx cypress run --env INTEGRATION_TEST_HOST=http://localhost:3000/",
     "test:e2e-ci": "npx cypress run --env INTEGRATION_TEST_HOST=https://tron-common-api.staging.dso.mil/ configFile=pipeline",
