--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-json-editor-ajrm": "^2.5.13",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -84,13 +85,13 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.1.22",
-    "@storybook/addon-actions": "^6.2.8",
-    "@storybook/addon-docs": "^6.2.8",
-    "@storybook/addon-essentials": "^6.2.8",
-    "@storybook/addon-links": "^6.2.8",
-    "@storybook/node-logger": "^6.2.8",
+    "@storybook/addon-actions": "^6.3.0-beta.18",
+    "@storybook/addon-docs": "^6.3.0-beta.18",
+    "@storybook/addon-essentials": "^6.3.0-beta.18",
+    "@storybook/addon-links": "^6.3.0-beta.18",
+    "@storybook/node-logger": "^6.3.0-beta.18",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.8",
+    "@storybook/react": "^6.3.0-beta.18",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
