--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.4.3",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.12.1",
