--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@storybook/node-logger": "^6.2.8",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.8",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
