--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/swagger-ui-react": "^3.35.1",
     "@types/uuid": "^8.3.0",
     "ag-grid-community": "^25.0.1",
     "ag-grid-react": "^25.0.1",
@@ -32,12 +33,12 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-json-editor-ajrm": "^2.5.13",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "sass": "^1.32.8",
+    "swagger-ui-react": "^3.50.0",
     "ts-json-schema-generator": "^0.92.0",
     "typescript": "^4.1.3",
     "uswds": "^2.8.0",
