--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "clean:generated-api-client": "rimraf src/openapi",
     "generate-api-client:code": "npm run clean:generated-api-client && openapi-generator-cli generate -g typescript-axios -i resources/tron-common-api.json -o src/openapi --additional-properties=withSeparateModelsAndApi=true,apiPackage=apis,modelPackage=models,withInterfaces=true",
     "generate-api-client:guards": "./node_modules/.bin/ts-json-schema-generator --path 'src/openapi/models/**/*.ts' -o src/api/model-types.json -i 'model-types.json'",
+    "generate-api-client:guards-windows": ".\\node_modules\\.bin\\ts-json-schema-generator --path src/openapi/models/**/*.ts -o src/api/model-types.json -i model-types.json",
     "generate-api-client:post": "node process-json.js",
     "generate-api-client": "npm run generate-api-client:code && npm run generate-api-client:guards && npm run generate-api-client:post",
+    "generate-api-client:windows": "npm run generate-api-client:code && npm run generate-api-client:guards-windows && npm run generate-api-client:post",
     "lint": "eslint . --ext ts,tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "preinstall": "npx npm-force-resolutions"
