--- a/package.json
+++ b/package.json
@@ -90,13 +90,13 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.1.22",
-    "@storybook/addon-actions": "^6.3.0-beta.18",
-    "@storybook/addon-docs": "^6.3.0-beta.18",
-    "@storybook/addon-essentials": "^6.3.0-beta.18",
-    "@storybook/addon-links": "^6.3.0-beta.18",
-    "@storybook/node-logger": "^6.3.0-beta.18",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.3.0-beta.18",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-docs": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/node-logger": "^6.3.7",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.7",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
