--- a/.env.development.example
+++ b/.env.development.example
@@ -1,4 +1,5 @@
 REACT_APP_API_BASE_URL=http://localhost:9000/
 REACT_APP_API_VERSION_PREFIX=v1
+REACT_APP_API_VERSION_2_PREFIX=v2
 REACT_APP_API_PATH_PREFIX=api
 REACT_APP_TEST_USER_TOKEN=
