--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@types/react-dom": "^16.9.10",
     "@types/swagger-ui-react": "^3.35.1",
     "@types/uuid": "^8.3.0",
+    "@visx/group": "^2.1.0",
+    "@visx/mock-data": "^2.1.0",
+    "@visx/scale": "^2.1.0",
+    "@visx/shape": "^2.1.1",
     "ag-grid-community": "^25.0.1",
     "ag-grid-react": "^25.0.1",
     "ajv": "^8.4.0",
@@ -25,6 +29,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.3.0",
     "chai": "^4.2.0",
+    "d3-array": "^3.0.4",
     "date-fns": "^2.22.1",
     "fast-deep-equal": "^3.1.3",
     "lodash.clonedeep": "^4.5.0",
@@ -88,6 +93,7 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.1.22",
+    "@types/d3-array": "^3.0.1",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
