[TRONAPI-756] - updating CSP policy for pen test

--- a/nginx.conf
+++ b/nginx.conf
@@ -46,7 +46,17 @@ http {
             add_header X-XSS-Protection "1; mode=block";
             # This will enforce HTTP browsing into HTTPS and avoid ssl stripping attack
             add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;";
-            add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' *.dso.mil data:";
+            add_header Content-Security-Policy "
+              default-src 'self' 'unsafe-inline' 'unsafe-eval' *.dso.mil data:;
+              img-src 'self' *.dso.mil data:;
+              connect-src 'self' *.dso.mil;
+              font-src 'self' *.dso.mil data:;
+              object-src 'self' *.dso.mil;
+              media-src 'self' *.dso.mil data:;
+              form-action 'self' *.dso.mil;
+              manifest-src 'self' *.dso.mil;
+              frame-src 'none';
+              frame-ancestors 'none';" always;
         }
     }
 }
