--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "test:unit": "npm install && react-scripts test --coverage --watchAll=false --runInBand",
     "cypress:open": "npx cypress open --env INTEGRATION_TEST_HOST=http://localhost:3000",
     "test:e2e-local": "npx cypress run --env INTEGRATION_TEST_HOST=http://localhost:3000",
-    "test:e2e-ci": "npx cypress run --env INTEGRATION_TEST_HOST=https://tron-common-api.staging.dso.mil/ configFile=pipeline",
+    "test:e2e-ci-local": "npx cypress run --env INTEGRATION_TEST_HOST=http://localhost:3000,ADMIN_API_HOST=http://localhost:3000,APP_CLIENT_API_HOST=http://localhost:3000,APP_CLIENT_DASHBOARD_API_HOST=http://localhost:3000",
+    "test:e2e-ci": "npx cypress run --env INTEGRATION_TEST_HOST=https://tron-common-api.staging.dso.mil,ADMIN_API_HOST=https://tron-common-api.staging.dso.mil,APP_CLIENT_API_HOST=https://tron-common-api.staging.dso.mil,APP_CLIENT_DASHBOARD_API_HOST=https://tron-common-api.staging.dso.mil",
     "sonar": "sonar-scanner -Dsonar.projectVersion=${version}",
     "clean:generated-api-client": "rimraf src/openapi",
     "generate-api-client:code": "npm run clean:generated-api-client && openapi-generator-cli generate -g typescript-axios -i resources/tron-common-api.json -o src/openapi --additional-properties=withSeparateModelsAndApi=true,apiPackage=apis,modelPackage=models,withInterfaces=true",
