--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "url-parse": "1.5.3",
     "tar": "6.1.7",
     "path-parse": "1.0.7",
-    "axios": "0.21.4"
+    "axios": "0.21.4",
+    "lodash": "4.17.20"
   }
 }
