--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "url-parse": "1.5.3",
     "tar": "6.1.7",
     "path-parse": "1.0.7",
-    "axios": "0.21.4",
-    "lodash": "4.17.20"
+    "axios": "0.21.4"
   }
 }
