--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.1.22",
     "@types/d3-array": "^3.0.1",
+    "@types/jwt-simple": "^0.5.33",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
@@ -105,6 +106,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jwt-simple": "^0.5.6",
     "msw": "^0.26.1",
     "rimraf": "^3.0.2"
   },
