--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "sass": "^1.32.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "swagger-ui-react": "^3.50.0",
     "ts-json-schema-generator": "^0.92.0",
     "typescript": "^4.1.3",
