--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hookstate/initial": "^3.0.0",
     "@hookstate/touched": "^3.0.0",
     "@hookstate/validation": "^3.0.0",
+    "@rehooks/local-storage": "^2.4.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
