--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "cypress": "^7.6.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^7.21.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
