--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "sass": "^1.32.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "swagger-ui-react": "^3.50.0",
+    "swagger-ui-react": "^4.1.0",
     "ts-json-schema-generator": "^0.92.0",
     "typescript": "^4.1.3",
     "uswds": "^2.8.0",
@@ -129,13 +129,14 @@
   },
   "resolutions": {
     "remark-parse": "9.0.0",
-    "prismjs": "1.24.0",
     "url-parse": "1.5.3",
     "tar": "6.1.7",
     "path-parse": "1.0.7",
     "axios": "0.21.4",
     "ansi-regex": "5.0.1",
     "shell-quote": "1.7.3",
-    "json-schema": "0.4.0"
+    "json-schema": "0.4.0",
+    "immer": "9.0.6",
+    "nth-check": "2.0.1"
   }
 }
