finished off dylans cypress tests for doc space

--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "test": "npx react-scripts test",
     "eject": "react-scripts eject",
     "test:unit": "npm install && react-scripts test --coverage --watchAll=false --runInBand",
-    "cypress:open": "npx cypress open --env INTEGRATION_TEST_HOST=http://localhost:3000",
+    "cypress:open": "npx cypress open --config-file cypress-all.json --env LOCAL_ENV=true,INTEGRATION_TEST_HOST=http://localhost:3000,ADMIN_API_HOST=http://localhost:3000,APP_CLIENT_API_HOST=http://localhost:3000,APP_CLIENT_DASHBOARD_API_HOST=http://localhost:3000",
     "test:e2e-local": "npx cypress run --env INTEGRATION_TEST_HOST=http://localhost:3000",
-    "test:e2e-ci-local": "npx cypress run --env INTEGRATION_TEST_HOST=http://localhost:3000,ADMIN_API_HOST=http://localhost:3000,APP_CLIENT_API_HOST=http://localhost:3000,APP_CLIENT_DASHBOARD_API_HOST=http://localhost:3000",
+    "test:e2e-ci-local": "npx cypress run --config-file cypress-all.json --env LOCAL_ENV=true,INTEGRATION_TEST_HOST=http://localhost:3000,ADMIN_API_HOST=http://localhost:3000,APP_CLIENT_API_HOST=http://localhost:3000,APP_CLIENT_DASHBOARD_API_HOST=http://localhost:3000",
     "test:e2e-ci": "npx cypress run --env INTEGRATION_TEST_HOST=https://tron-common-api.staging.dso.mil,ADMIN_API_HOST=https://tron-common-api.staging.dso.mil,APP_CLIENT_API_HOST=https://tron-common-api.staging.dso.mil,APP_CLIENT_DASHBOARD_API_HOST=https://tron-common-api.staging.dso.mil",
     "sonar": "sonar-scanner -Dsonar.projectVersion=${version}",
     "clean:generated-api-client": "rimraf src/openapi",
