--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "shell-quote": "1.7.3",
     "json-schema": "0.4.0",
     "immer": "9.0.6",
-    "nth-check": "2.0.1"
+    "nth-check": "2.0.1",
+    "postcss": "7.0.36"
   }
 }
