--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fast-deep-equal": "^3.1.3",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
+    "postcss-safe-parser": "^6.0.0",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.4.3",
