--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "fast-deep-equal": "^3.1.3",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
-    "postcss-safe-parser": "^6.0.0",
+    "postcss-safe-parser": "4.0.2",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.4.3",
@@ -139,7 +139,9 @@
     "json-schema": "0.4.0",
     "immer": "9.0.6",
     "nth-check": "2.0.1",
-    "postcss": "8.4.5",
-    "follow-redirects": "1.14.7"
+    "postcss": "7.0.36",
+    "follow-redirects": "1.14.7",
+    "postcss-safe-parser": "4.0.2",
+    "tmpl": "1.0.5"
   }
 }
