--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
   },
   "resolutions": {
     "remark-parse": "9.0.0",
-    "url-parse": "1.5.7",
+    "url-parse": "1.5.10",
     "tar": "6.1.7",
     "path-parse": "1.0.7",
     "axios": "0.21.4",
@@ -144,6 +144,6 @@
     "postcss-safe-parser": "4.0.2",
     "tmpl": "1.0.5",
     "node-forge": "1.0.0",
-    "prism-js": "1.26.0"
+    "prismjs": "1.27.0"
   }
 }
