--- a/package.json
+++ b/package.json
@@ -144,6 +144,9 @@
     "postcss-safe-parser": "4.0.2",
     "tmpl": "1.0.5",
     "node-forge": "1.0.0",
-    "prismjs": "1.27.0"
+    "prismjs": "1.27.0",
+    "node-fetch": "3.1.1",
+    "lodash-es": "4.17.21",
+    "minimist": "1.2.6"
   }
 }
